# pharmatrack-api

./: .env.example  .gitignore  CLAUDE.md  Procfile  README.md  pyproject.toml  start.sh
.github/workflows/: test.yml
migrations/: env.py
migrations/versions/: 1a2b3c4d5e6f_add_species_sale_format.py  2b3c4d5e6f7a_add_species_care_info.py  3c4d5e6f7a8b_add_species_price_tiers.py  4d5e6f7a8b9c_add_species_profile_texts.py  5e6f7a8b9c0d_create_articles_table.py  6f7a8b9c0d1e_add_product_show_online.py  7a8b9c0d1e2f_add_offers_and_bundles.py  7b792ef0285a_initial_migration.py  8b9c0d1e2f3a_create_app_settings.py  90965c1a62f0_initial_migration.py  9c0d1e2f3a4b_add_show_public_to_groups.py  a1b2c3d4e5f6_add_refresh_token_expires_at_to_users.py  a3b4c5d6e7f8_add_tracks_batches_nullable_expiration.py  a7b8c9d0e1f2_monetary_columns_double_to_numeric.py  b27c05af3a78_initial_migration.py  b2c3d4e5f6a7_add_sensor_readings_table.py  b4c5d6e7f8a9_add_animals_tables.py  b8c9d0e1f2a3_add_fk_indexes_purchases_purchase_details_product_batch.py  bff39322102e_initial_migration.py  c3d4e5f6a7b8_add_deleted_at_to_users_roles_products.py  c5d6e7f8a9b0_add_animal_groups.py  c9d0e1f2a3b4_drop_unique_constraints_supplier_rfc_email.py  checkoutat01_add_checkout_at_to_orders.py  customeraddress01_structured_address.py  customerorders01_add_customers_and_orders.py  d0e1f2a3b4c5_add_indexes_sales_status_payment_method.py  d4e5f6a7b8c9_add_deleted_at_to_branches_sale_payments.py  d6e7f8a9b0c1_add_animal_photos_and_legal_doc.py  e1f2a3b4c5d6_fix_lot_code_unique_partial_index.py  e5f6a7b8c9d0_add_enum_types_for_sales_status_and_payment_method.py  f2a3b4c5d6e7_create_password_reset_tokens_table.py  f6a7b8c9d0e1_add_enum_types_for_user_gender_and_document_type.py  featurehomegrp01_add_feature_home_to_groups.py  (+5 more)
scripts/: .env.sync.example  backup-prod.ps1  sync-common.ps1  sync-down.ps1  sync-up.ps1
src/pharmatrack/: main.py  (+2 more)
tests/: conftest.py  test_address.py  test_animal_stock.py  test_animals.py  test_articles.py  test_auth.py  test_branches.py  test_bundles.py  test_google_auth.py  test_group_visibility.py  test_husbandry.py  test_image_cache.py  test_ingredients.py  test_main.py  test_payments.py  test_permissions.py  test_product_batch.py  test_product_brand.py  test_product_categories.py  test_product_master.py  test_products.py  test_public_animals.py  test_public_products.py  test_purchase_details.py  test_purchases.py  test_refund_products.py  test_roles.py  test_sale_batch_usage.py  test_sale_details.py  test_sale_payments.py  test_sales.py  test_sales_summary.py  test_seed_animals.py  test_shop.py  test_suppliers.py  test_users.py  test_venta_libre.py  utils.py
(+215 files in other folders)
