[project]
name = "pharmatrack"
version = "1.0.0"
description = "Pharmacy Inventory & Sales Management API"
authors = [
    {name = "Luciano", email = "ljuarezs2000@alumno.ipn.mx"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "sqlalchemy (>=2.0.42,<3.0.0)",
    "uvicorn[standard] (>=0.35.0,<0.36.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pydantic[email] (>=2.11.7,<3.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "bcrypt (==4.0.1)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "pydantic-extra-types (>=2.10.6,<3.0.0)",
    "phonenumbers (>=9.0.17,<10.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "slowapi (>=0.1.9,<0.2.0)"
]

[tool.poetry]
packages = [{include = "pharmatrack", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
reset-db         = "pharmatrack.scripts.reset_db:reset_db"
reset-migrations = "pharmatrack.scripts.reset_migrations:reset_migrations"

# =========================================================
# 🧪 Pytest
# =========================================================
[tool.pytest.ini_options]
# Le dice a pytest dónde está el código fuente
pythonpath = ["src"]

# Carpeta de tests
testpaths = ["tests"]

# Muestra output de print() en tests fallidos
# Útil para los print("DEBUG...") que ya tienes
addopts = "-v --tb=short"